0.2.1
Fixed setting window background.
Fixed unminimizing windows.
Fixed slider.
Fixed dock spuriously reappearing after iconizing.
Adjusted dock window context menu position.
Added context menu to main dock window.
Added "Iconize Dock" to launcher context window.

0.2.0
Fixed stuck tasks.
Fixed stuck launchers.
Fixed dropping multiple files on dock to open.
Fixed calandar not highlighting todays date.
Pop up list tweaks.
Pop up task lists now dont change order.
Hide popup list when exiting list.
Hide desktop list when exiting desktop switcher gadget.
Added "Set Dates" to calandar widget, see README.
Centred launcher icons etc.
Added prelight pref ( setting colour to '#00000000' will cause icons to raise instead of prelighting ).
cleaned up positioning of labels and context windows.
Minor GUI fixes.
Fixed random bouncing of launchers.
Fixed trying to open dock on non existant monitor.
Added a couple of background examples.
UI updates.
Added use end caps ( optional ) when setting BG image.
Better display of transparent BG image.
Added optional background image to dock.
Fixed finding desktop files.
Minor fix for launchers.
Added 'Quit Dock' to lanuncher context menu.
Minor gui tweaks.
Fixed dock crash when no tasks and task bar on.
Fixed broken/not jpg/png icon in taskbar.
Task bar gui fix.
Minor gui tweaks.
Fixed calendar window level.
Cleaned up launcher/taskbar code.
Removed glib GKeyFile calls.
GUI tweaks.
Added run prefs for dock to launcher popup menu.
Code clean.
Fixed current date highlight for single digit.
Fixed seg fault when not using launchers.
Fixed mem leak.
Added date reminder file to calendar (~/.config/LFS/calendardates).
Added calendar widget.
Fixed updating window names in task lists.
Fixed task bar icons changing position.
Added right click on task pop up list window to move window to current desktop.
Added support for multiple docks.
Changed some prefs names.
Adjusted desktop switcher and clock labels.
Allow DnDing multiple files.