@@ -1,4 +1,5 @@
 0.2.1
+Fixed right side image when using background.
 Fixed setting window background.
 Fixed unminimizing windows.
 Fixed slider.
